# 8-ball

./: AGENTS.md  AGENTS1.md  README.md  pyproject.toml  requirements.txt
AGENTS/: cursorFileA0.md
config/: catalog-policy.yaml  sources.yaml
data/: catalog.csv
data/families/: alfred.json  all-minilm.json  athene-v2.json  aya-expanse.json  aya.json  bakllava.json  bespoke-minicheck.json  bge-large.json  bge-m3.json  codebooga.json  codegeex4.json  codegemma.json  codellama.json  codeqwen.json  codestral.json  codeup.json  cogito-2.1.json  cogito.json  command-a.json  command-r-plus.json  command-r.json  command-r7b-arabic.json  command-r7b.json  dbrx.json  deepcoder.json  deepscaler.json  deepseek-coder-v2.json  deepseek-coder.json  deepseek-llm.json  deepseek-ocr.json  deepseek-r1.json  deepseek-v2.5.json  deepseek-v2.json  deepseek-v3.1.json  deepseek-v3.json  deepseek-v4-flash.json  deepseek-v4-pro.json  devstral-2.json  devstral-small-2.json  devstral.json  (+191 more)
